<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather Forecast</string>
    <string name="celcius">\u2103</string>
    <string name="fahrenheit">\u2109</string>
    <string name="temperature">Temperature:-</string>
    <string name="date">Date</string>
    <string name="desc">Desc</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="wind">Wind Speed:-</string>
    <string name="speedUnit">mps</string>
    <string name="degree">Direction:</string>
    <string name="pressure">Pressure:-</string>
    <string name="humidity">Humidity:-</string>
    <string name="cloud">Cloudiness:-</string>
    <string name="rain">Rain:-</string>
    <string name="snow">Snow:-</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_preference">Settings</string>

    <string name="pref_location_label" translatable="false">Location</string>
    <string name="pref_location_key" translatable="false">Location</string>
    <string name="pref_location_default" translatable="false">Kathmandu</string>


    <string name="pref_unit_label" translatable="false">Temperature Unit</string>
    <string name="pref_unit_key" translatable="false">imperial</string>
    <string name="pref_unit_metric" translatable="false">metric</string>

    <string name="pref_unit_options" translatable="false"></string>

</resources>
