<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:gravity="top"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:layout_weight="0.10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sunny"
            android:id="@+id/weatherIcon"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/weatherIcon"
            android:layout_toEndOf="@+id/weatherIcon"
            android:layout_centerVertical="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateAndDesc"
                android:layout_centerVertical="true">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/date"
                    android:layout_marginLeft="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:id="@+id/dateView"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/date"
                    android:layout_marginLeft="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desc"
                        android:id="@+id/descriptionView"
                        android:layout_alignParentTop="true"

                        android:layout_centerHorizontal="true" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/temperature"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/dateAndDesc"
                android:layout_toEndOf="@+id/dateAndDesc"
                android:layout_marginLeft="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/max"
                    android:text="@string/max"
                    android:layout_alignParentTop="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/min"
                    android:text="@string/min"
                    android:layout_alignParentTop="false"
                    android:layout_marginTop="15dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/maxTempView"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/max"
                    android:layout_toEndOf="@+id/max"
                    android:layout_marginLeft="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/minTempView"
                    android:layout_alignParentTop="false"
                    android:layout_toRightOf="@+id/min"
                    android:layout_toEndOf="@+id/min"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="15dp"/>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>